--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <ul class="menubar">
+        <li class="li"><a href="#Welcome">Home</a></li>
         <li class="li"><a href="#About">About</a></li>
         <li class="li"><a href="#Hobby">My favorite hobby</a></li>
         <li class="li">My Work</li>
